Got rid of findbugs warnings.